--- a/index_eg.html
+++ b/index_eg.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -51,20 +51,20 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#about">À propos</a>
+              <a class="nav-link" aria-current="page" href="#about">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#skills">Compétences</a>
+              <a class="nav-link" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Projets</a>
+              <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
           <div class="ms-auto">
-            <a class="langue" href="index_eg.html"> En </a>
+            <a class="langue" href="index.html"> Fr </a>
           </div>
         </div>
       </div>
@@ -80,9 +80,11 @@
           style="width: 70%; position: relative; z-index: 1"
         >
           <div class="newfont">
-            <h1>Bonjour, Je suis Kandyss Camier</h1>
+            <h1>Hello, I am Kandyss Camier</h1>
           </div>
-          <p class="text-left space2">Intégratrice web basé à Paris, France.</p>
+          <p class="text-left space2">
+            Front-end developer based in Paris, France.
+          </p>
           <h1>
             <i class="fa-brands fa-html5" style="color: #cb5757"></i>
             <i class="fa-brands fa-css3-alt" style="color: #628ad0"></i>
@@ -91,44 +93,39 @@
         </div>
       </div>
       <div class="container-fluid newfont">
-        <h2>À propos de moi</h2>
+        <h2>About me</h2>
         <p>
-          Ayant récemment terminé ma formation numérique avec le CNAM et TharGo,
-          j'ai découvert ma passion et je souhaite maintenant construire ma
-          carrière dans ce domaine. Mon prochain objectif est de poursuivre mes
-          études en développement web l'année prochaine pour approfondir mes
-          connaissances.
+          Having recently completed my digital training with CNAM and TharGo,
+          I've discovered my passion for the web and now want to build my career
+          in this field. My next objective is to continue in front-end
+          development next year, to deepen my knowledge.
           <br />
           <br />
-          Je possède des compétences en graphisme (Canva, Procreate, IbisPaintX,
-          Pixlr) et en montage vidéo (VLLO, CapCut, TikTok). J'ai également
-          suivi une formation en codage (HTML, CSS, JavaScript) avec Shecodes.
+          I have skills in graphic design (Canva, Procreate, IbisPaintX, Pixlr)
+          and video editing (VLLO, CapCut, TikTok). I have also completed the
+          Shecodes bootcamp (HTML, CSS, JavaScript).
           <br />
           <br />
-          Je suis une personne organisée, ambitieuse, responsable et réfléchie,
-          avec des centres d'intérêt tels que le dessin digital, l'apprentissage
-          du coréen et la lecture de romans.
+          I'm organized, ambitious, responsible and thoughtful, with interests
+          varying between digital drawings, learning Korean to reading.
         </p>
       </div>
     </section>
     <div class="container-fluid newfont">
       <section id="skills">
-        <h2>Mes compétences</h2>
+        <h2>Skills</h2>
         <p>
-          - Bonne compréhension des principes fondamentaux du web, y compris
-          HTML/CSS <br />
-          - Utilisation de GitHub pour la gestion de versions et la
-          collaboration sur des projets<br />
-          - Graphisme avec Canva, Procreate, IbisPaintX et Pixlr<br />
-          - Compétences avancées en montage vidéo avec VLLO, CapCut et TikTok<br />
-          - Gestion de commande, accueil client, gestion des stocks et des
-          livraisons<br />
-          - Compétences en travail d'équipe, communication et collaboration avec
-          collègues et clients <br />
-          - Organisation, nettoyage et sécurisation des espaces de travail
+          - Good understanding of web fundamentals, including HTML/CSS <br />
+          - Using GitHub to collaborate on projects and knowing how to push
+          them<br />
+          - Design on Canva, Procreate, IbisPaintX and Pixlr<br />
+          - Advanced video editing skills on VLLO, CapCut and TikTok.<br />
+          - Customer reception, stock and delivery management<br />
+          - Skillful in teamwork, communication and collaboration between
+          colleagues and customers <br />
+          - Organizing, cleaning and securing work areas
           <br />
-          - Notions fondamentales du web et stratégies de communication sur les
-          réseaux sociaux <br />
+          - Web basics and communication strategies on social media. <br />
         </p>
       </section>
     </div>
@@ -140,15 +137,14 @@
             <div class="col-sm-6">
               <h2 class="text-center mb-3 newfont">LOVIA HIGH</h2>
               <p class="text-center">
-                Lovia High est un roman visuel interactif où les joueurs se
-                retrouvent dans le rôle d'une jeune lycéenne nouvelle en ville.
+                Lovia High is an interactive visual novel where players find
+                themselves in the role of a young high-school girl new to town.
                 <br />
-                Je me suis occupé de la partie design avec ma collaboratrice de
-                l’interface, du code et de la communication.
+                I took care of the design part of the app with my colleague, the
+                interface, the code and the communication.
               </p>
             </div>
 
-            <!-- Carousel -->
             <div class="col-sm-6">
               <div
                 id="demo"
@@ -189,6 +185,7 @@
                   ></button>
                 </div>
 
+                <!-- The slideshow/carousel -->
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img
@@ -198,7 +195,7 @@
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Screen du jeu</h4>
+                      <h4>Screenshoot of the game</h4>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -209,7 +206,7 @@
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Info Stéphanie</h4>
+                      <h4>Stéphanie's info</h4>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -220,7 +217,7 @@
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Info Tommy</h4>
+                      <h4>Tommy's info</h4>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -231,7 +228,7 @@
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Interface du jeu</h4>
+                      <h4>Game interface</h4>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -291,16 +288,13 @@
                   />
                 </div>
                 <div class="col-sm-6">
-                  <h2 class="text-center mb-3 newfont">
-                    Recommandations livres
-                  </h2>
+                  <h2 class="text-center mb-3 newfont">Book recommendations</h2>
                   <p class="text-center">
-                    Mon premier projet Web est un site dédié à l'archivage et au
-                    partage de mes lectures récentes. En tant qu'enthousiaste de
-                    la littérature, j'ai créé ce site pour enregistrer mes
-                    découvertes littéraires avec des résumés et des critiques
-                    personnelles. Ce projet m'a permis d'allier ma passion pour
-                    les livres à mes compétences en développement web.
+                    My first Web project is a site dedicated to archiving and
+                    sharing of my recent reads. As a literary enthusiast, I
+                    created this site to record my discoveries with summaries
+                    and personal reviews. This project allowed me to combine my
+                    passion for books with my newly developed web skills.
                   </p>
                   <p class="text-center">
                     <a
@@ -315,26 +309,22 @@
               </div>
               <div class="row mb-5 align-items-center">
                 <div class="col-sm-6">
-                  <h2 class="text-center mb-3 newfont">Montage vidéo</h2>
+                  <h2 class="text-center mb-3 newfont">Video editing</h2>
                   <p class="text-center">
-                    Pendant mon temps libre, je me consacre à la création de
-                    montages vidéo pour mes proches. Cette passion stimule ma
-                    créativité, renforce mes compétences techniques en logiciels
-                    de montage, et aiguise ma capacité à résoudre des problèmes.
-                    Elle m'a permis de développer un sens aigu du détail, de la
-                    patience et de la persévérance, tout en améliorant ma
-                    gestion du temps et mes compétences en communication.
+                    In my spare time, I edit videos for friends and family. This
+                    passion stimulates my creativity, reinforces my technical
+                    skills in editing and sharpens my problem-solving skills. It
+                    has enabled me to develop a keen sense for details, patience
+                    and perseverance, while improving my time management and
+                    communication skills.
                     <br />
-                    Faire des montages vidéo m'apprends à bien gérer mon temps.
-                    Une vidéo nécessitant une planification et une organisation
-                    pour respecter les délais. Lorsque je collabore avec
-                    d'autres personnes, mes compétences en communication sont
-                    mises à l'épreuve, afin de comprendre leurs attentes,
-                    recevoir leurs retours et expliquer mes propres décisions de
-                    manière claire et concise.
+                    Video editing teaches me to manage my time. A video requires
+                    planning and organization to meet deadlines. When I edit for
+                    other people, my communication skills are put to the test to
+                    understand their expectations, receive their feedback and
+                    explain my own decisions clearly and concisely.
                     <br />
-                    Chaque vidéo est une occasion de raconter une histoire
-                    captivante, tout en relevant des défis techniques.
+                    Each video is an opportunity to tell a captivating story.
                   </p>
 
                   <p class="text-center">
@@ -351,7 +341,7 @@
                 <div class="col-sm-6">
                   <video height="340" autoplay muted loop>
                     <source src="video/video.mp4" type="video/mp4" />
-                    Votre navigateur ne prend pas en charge cette vidéo.
+                    Your browser does not support the video.
                   </video>
                 </div>
               </div>
@@ -365,16 +355,15 @@
                   />
                 </div>
                 <div class="col-sm-6">
-                  <h2 class="text-center mb-3 newfont">Site web hackathon</h2>
+                  <h2 class="text-center mb-3 newfont">Hackathon website</h2>
                   <p class="text-center">
-                    Lors du hackathon de 3 jours, les équipes ont été chargées
-                    de créer une marque de A à Z. Nous avons conçu son ADN, ses
-                    activités et services, ainsi que sa charte graphique
-                    incluant un logo, des polices, des couleurs et des visuels.
-                    Parallèlement, j'ai personnellement pris en charge le
-                    développement et le design du site web qui présentait la
-                    structure, ses activités et son équipe, tout en offrant aux
-                    visiteurs la possibilité de les contacter.
+                    During a 3-day hackathon, teams were tasked with creating a
+                    brand from scratch. We designed its DNA, activities and
+                    services, as well as its graphic charter including logo,
+                    fonts, colors and visuals. I also personally took charge of
+                    the development and design of the website that presented the
+                    structure, its activities and its team, while offering
+                    visitors the opportunity to contact us.
                   </p>
                   <p class="text-center">
                     <a
@@ -395,26 +384,25 @@
 
     <div class="container-fluid">
       <section id="contact">
-        <h2 class="newfont">Contactez-moi</h2>
+        <h2 class="newfont">Contact me</h2>
         <p>
-          Si mes compétences et mon expérience vous intéressent ou correspondent
-          à ce que vous recherchez, n'hésitez pas à me contacter en envoyant un
-          e-mail à
+          If my skills and experience interest you or correspond to what you're
+          looking for, don't hesitate to reach out by sending an email to
           <a href="mailto:camierkandyss@gmail.com" target="_blank"
             >camierkandyss@gmail.com</a
           >. <br />
-          Mon profil LinkedIn contient plus de détails sur mon parcours
-          professionnel et mes compétences.
+          My LinkedIn profile contains more details about my career path and
+          skills.
           <br />
-          Vous pouvez visiter mon profil ici :
+          You can view my profile here :
           <a
             href="https://www.linkedin.com/in/kandyss-camier-ab0242227/"
             target="_blank"
             ><i class="fa-brands fa-linkedin" style="color: #4772bd"></i
           ></a>
           <br />
-          Je suis également active sur GitHub, où je partage mes projets de
-          codage les plus récents. Jetez un coup d'œil à mes travaux ici :
+          I'm also active on GitHub, where I share my most recent projects. Take
+          a look at my work here :
           <a href="https://github.com/andy231F" target="_blank"
             ><i class="fa-brands fa-github" style="color: #424242"></i
           ></a>
