--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="newfont">
             <h1>Bonjour, Je suis Kandyss Camier</h1>
           </div>
-          <p class="text-left space2">Intégratrice web basé à Paris, France.</p>
+          <p class="text-left space2">Intégratrice web à Paris, France.</p>
           <h1>
             <i class="fa-brands fa-html5" style="color: #cb5757"></i>
             <i class="fa-brands fa-css3-alt" style="color: #628ad0"></i>
