--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
       </section>
     </div>
     <section id="projects">
+      <h2 class="text-center mb-3 newfont">Mes projets</h2>
       <div class="projects-container m-5">
         <div class="container">
           <div class="row mb-5 align-items-center">
@@ -192,8 +193,8 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img
-                      src="images/img_1.jpg"
-                      alt="Los Angeles"
+                      src="images/img_1.png"
+                      alt="Capture d'écran"
                       class="d-block"
                       style="width: 100%"
                     />
@@ -247,7 +248,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_6.PNG"
+                      src="images/img_6.png"
                       alt="teaser"
                       class="d-block"
                       style="width: 100%"
