--- a/index_eg.html
+++ b/index_eg.html
@@ -130,6 +130,7 @@
       </section>
     </div>
     <section id="projects">
+      <h2 class="text-center mb-3 newfont">My projects</h2>
       <div class="projects-container m-5">
         <div class="container">
           <div class="row mb-5 align-items-center">
@@ -189,8 +190,8 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img
-                      src="images/img_1.jpg"
-                      alt="Los Angeles"
+                      src="images/img_1.png"
+                      alt="Screenshot"
                       class="d-block"
                       style="width: 100%"
                     />
@@ -244,7 +245,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_6.PNG"
+                      src="images/img_6.png"
                       alt="teaser"
                       class="d-block"
                       style="width: 100%"
