--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_6.png"
+                      src="images/img_6.PNG"
                       alt="teaser"
                       class="d-block"
                       style="width: 100%"
