--- a/index_eg.html
+++ b/index_eg.html
@@ -245,7 +245,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_6.png"
+                      src="images/img_6.PNG"
                       alt="teaser"
                       class="d-block"
                       style="width: 100%"
