--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@
                     data-bs-target="#demo"
                     data-bs-slide-to="5"
                   ></button>
+                  <button
+                    type="button"
+                    data-bs-target="#demo"
+                    data-bs-slide-to="6"
+                  ></button>
                 </div>
 
                 <div class="carousel-inner">
@@ -199,7 +204,7 @@
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Screen du jeu</h4>
+                      <h5>Screen du jeu</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -210,18 +215,18 @@
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Info Stéphanie</h4>
+                      <h5>Info Stéphanie</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_3.PNG"
-                      alt="Info personnelle 2"
+                      src="images/img_6.png"
+                      alt="Sauvegarde"
                       class="d-block"
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Info Tommy</h4>
+                      <h5>Réglage</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -232,29 +237,40 @@
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Interface du jeu</h4>
+                      <h5>Interface du jeu</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img
                       src="images/img_5.PNG"
+                      alt="Capture d'écran"
+                      class="d-block"
+                      style="width: 100%"
+                    />
+                    <div class="carousel-caption">
+                      <h5>Screen du jeu</h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="images/img_3.png"
+                      alt="Capture d'écran"
+                      class="d-block"
+                      style="width: 100%"
+                    />
+                    <div class="carousel-caption">
+                      <h5>Sauvegarde</h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="images/img_7.PNG"
                       alt="Illustration personnage"
                       class="d-block"
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Illustration</h4>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      src="images/img_6.PNG"
-                      alt="teaser"
-                      class="d-block"
-                      style="width: 100%"
-                    />
-                    <div class="carousel-caption">
-                      <h4>Teaser</h4>
+                      <h5>Illustration</h5>
                     </div>
                   </div>
                 </div>
