--- a/index_eg.html
+++ b/index_eg.html
@@ -184,6 +184,11 @@
                     data-bs-target="#demo"
                     data-bs-slide-to="5"
                   ></button>
+                  <button
+                    type="button"
+                    data-bs-target="#demo"
+                    data-bs-slide-to="6"
+                  ></button>
                 </div>
 
                 <!-- The slideshow/carousel -->
@@ -196,7 +201,7 @@
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Screenshoot of the game</h4>
+                      <h5>Screenshoot of the game</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -207,18 +212,18 @@
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Stéphanie's info</h4>
+                      <h5>Stéphanie's info</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_3.PNG"
+                      src="images/img_6.png"
                       alt="Info personnelle 2"
                       class="d-block"
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Tommy's info</h4>
+                      <h5>Setting</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -229,7 +234,7 @@
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Game interface</h4>
+                      <h5>Game interface</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -240,18 +245,29 @@
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Illustration</h4>
+                      <h5>Screenshoot of the game</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_6.PNG"
+                      src="images/img_3.png"
                       alt="teaser"
                       class="d-block"
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h4>Teaser</h4>
+                      <h5>Saves</h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="images/img_7.PNG"
+                      alt="teaser"
+                      class="d-block"
+                      style="width: 100%"
+                    />
+                    <div class="carousel-caption">
+                      <h5>Illustration</h5>
                     </div>
                   </div>
                 </div>
