--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h5>Sauvegarde</h5>
+                      <h5>Sauvegarde du jeu</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
