--- a/index_eg.html
+++ b/index_eg.html
@@ -223,7 +223,7 @@
                       style="width: 100%"
                     />
                     <div class="carousel-caption">
-                      <h5>Interface</h5>
+                      <h5>Interface setting</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
