--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img
-                      src="images/img_1.png"
+                      src="images/1.png"
                       alt="Capture d'écran"
                       class="d-block"
                       style="width: 100%"
@@ -209,7 +209,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_2.PNG"
+                      src="images/2.PNG"
                       alt="Infos personnelle"
                       class="d-block"
                       style="width: 100%"
@@ -220,7 +220,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_6.png"
+                      src="images/3.png"
                       alt="Sauvegarde"
                       class="d-block"
                       style="width: 100%"
@@ -231,7 +231,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_4.png"
+                      src="images/4.png"
                       alt="Interface du jeu carnet"
                       class="d-block"
                       style="width: 100%"
@@ -242,7 +242,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_5.PNG"
+                      src="images/5.png"
                       alt="Capture d'écran"
                       class="d-block"
                       style="width: 100%"
@@ -253,7 +253,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_3.png"
+                      src="images/6.png"
                       alt="Capture d'écran"
                       class="d-block"
                       style="width: 100%"
@@ -264,7 +264,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_7.PNG"
+                      src="images/7.PNG"
                       alt="Illustration personnage"
                       class="d-block"
                       style="width: 100%"
