--- a/index_eg.html
+++ b/index_eg.html
@@ -195,7 +195,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img
-                      src="images/img_1.png"
+                      src="images/1.png"
                       alt="Screenshot"
                       class="d-block"
                       style="width: 100%"
@@ -206,7 +206,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_2.PNG"
+                      src="images/2.PNG"
                       alt="Infos personnelle"
                       class="d-block"
                       style="width: 100%"
@@ -217,7 +217,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_6.png"
+                      src="images/3.png"
                       alt="Info personnelle 2"
                       class="d-block"
                       style="width: 100%"
@@ -228,7 +228,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_4.png"
+                      src="images/4.png"
                       alt="Interface du jeu carnet"
                       class="d-block"
                       style="width: 100%"
@@ -239,7 +239,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_5.PNG"
+                      src="images/5.png"
                       alt="Illustration personnage"
                       class="d-block"
                       style="width: 100%"
@@ -250,7 +250,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_3.png"
+                      src="images/6.png"
                       alt="teaser"
                       class="d-block"
                       style="width: 100%"
@@ -261,7 +261,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="images/img_7.PNG"
+                      src="images/7.PNG"
                       alt="teaser"
                       class="d-block"
                       style="width: 100%"
