Responsive now on phones and tablets

--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
     </nav>
 
     <section id="about" style="position: relative">
-      <div class="bg-image">
-        <img src="images/background.png" alt="Votre image" />
-      </div>
+      <div class="bg-image"></div>
       <div class="container space-con">
         <div
           class="mx-auto p-5"
@@ -134,12 +132,16 @@
     </div>
     <section id="projects">
       <h2 class="text-center mb-3 newfont">Mes projets</h2>
-      <div class="projects-container m-5">
+      <div class="projects-container">
         <div class="container">
           <div class="row mb-5 align-items-center">
             <!-- Lovia High Texte -->
             <div class="col-sm-6">
-              <h2 class="text-center mb-3 newfont">LOVIA HIGH</h2>
+              <img
+                src="images/logo.png"
+                class="img-logo mb-3"
+                alt="logo du jeu"
+              />
               <p class="text-center">
                 Lovia High est un roman visuel interactif où les joueurs se
                 retrouvent dans le rôle d'une jeune lycéenne nouvelle en ville.
@@ -296,7 +298,7 @@
           </div>
 
           <!-- projects 2 -->
-          <div class="projects-container m-5">
+          <div class="projects-container">
             <div class="container">
               <div class="row mb-5 align-items-center">
                 <div class="col-sm-6">
