--- a/index_eg.html
+++ b/index_eg.html
@@ -71,9 +71,7 @@
     </nav>
 
     <section id="about" style="position: relative">
-      <div class="bg-image">
-        <img src="images/background.png" alt="Votre image" />
-      </div>
+      <div class="bg-image"></div>
       <div class="container space-con">
         <div
           class="mx-auto p-5"
@@ -131,12 +129,16 @@
     </div>
     <section id="projects">
       <h2 class="text-center mb-3 newfont">My projects</h2>
-      <div class="projects-container m-5">
+      <div class="projects-container">
         <div class="container">
           <div class="row mb-5 align-items-center">
             <!-- Lovia High Texte -->
             <div class="col-sm-6">
-              <h2 class="text-center mb-3 newfont">LOVIA HIGH</h2>
+              <img
+                src="images/logo.png"
+                class="img-logo mb-3"
+                alt="logo du jeu"
+              />
               <p class="text-center">
                 Lovia High is an interactive visual novel where players find
                 themselves in the role of a young high-school girl new to town.
@@ -293,7 +295,7 @@
           </div>
 
           <!-- projects 2 -->
-          <div class="projects-container m-5">
+          <div class="projects-container">
             <div class="container">
               <div class="row mb-5 align-items-center">
                 <div class="col-sm-6">
