--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 Lovia High est un roman visuel interactif où les joueurs se
                 retrouvent dans le rôle d'une jeune lycéenne nouvelle en ville.
                 <br />
-                Je me suis occupé de la partie design avec ma collaboratrice de
+                Je me suis occupé de la partie design avec ma collaboratrice, de
                 l’interface, du code et de la communication.
               </p>
             </div>
@@ -315,8 +315,8 @@
                   </h2>
                   <p class="text-center">
                     Mon premier projet Web est un site dédié à l'archivage et au
-                    partage de mes lectures récentes. En tant qu'enthousiaste de
-                    la littérature, j'ai créé ce site pour enregistrer mes
+                    partage de mes lectures. En tant qu'enthousiaste de la
+                    littérature, j'ai créé ce site pour enregistrer mes
                     découvertes littéraires avec des résumés et des critiques
                     personnelles. Ce projet m'a permis d'allier ma passion pour
                     les livres à mes compétences en développement web.
@@ -339,7 +339,7 @@
                     Pendant mon temps libre, je me consacre à la création de
                     montages vidéo pour mes proches. Cette passion stimule ma
                     créativité, renforce mes compétences techniques en logiciels
-                    de montage, et aiguise ma capacité à résoudre des problèmes.
+                    de montage et aiguise ma capacité à résoudre des problèmes.
                     Elle m'a permis de développer un sens aigu du détail, de la
                     patience et de la persévérance, tout en améliorant ma
                     gestion du temps et mes compétences en communication.
@@ -352,8 +352,8 @@
                     recevoir leurs retours et expliquer mes propres décisions de
                     manière claire et concise.
                     <br />
-                    Chaque vidéo est une occasion de raconter une histoire
-                    captivante, tout en relevant des défis techniques.
+                    Chaque vidéo est une occasion de raconter une histoire, tout
+                    en relevant des défis techniques.
                   </p>
 
                   <p class="text-center">
@@ -391,9 +391,7 @@
                     activités et services, ainsi que sa charte graphique
                     incluant un logo, des polices, des couleurs et des visuels.
                     Parallèlement, j'ai personnellement pris en charge le
-                    développement et le design du site web qui présentait la
-                    structure, ses activités et son équipe, tout en offrant aux
-                    visiteurs la possibilité de les contacter.
+                    développement et le design du site web.
                   </p>
                   <p class="text-center">
                     <a
@@ -416,9 +414,8 @@
       <section id="contact">
         <h2 class="newfont">Contactez-moi</h2>
         <p>
-          Si mes compétences et mon expérience vous intéressent ou correspondent
-          à ce que vous recherchez, n'hésitez pas à me contacter en envoyant un
-          e-mail à
+          Si mes compétences correspondent à ce que vous recherchez, n'hésitez
+          pas à me contacter en envoyant un e-mail à
           <a href="mailto:camierkandyss@gmail.com" target="_blank"
             >camierkandyss@gmail.com</a
           >. <br />
@@ -430,12 +427,6 @@
             href="https://www.linkedin.com/in/kandyss-camier-ab0242227/"
             target="_blank"
             ><i class="fa-brands fa-linkedin" style="color: #4772bd"></i
-          ></a>
-          <br />
-          Je suis également active sur GitHub, où je partage mes projets de
-          codage les plus récents. Jetez un coup d'œil à mes travaux ici :
-          <a href="https://github.com/andy231F" target="_blank"
-            ><i class="fa-brands fa-github" style="color: #424242"></i
           ></a>
         </p>
       </section>
