--- a/index_eg.html
+++ b/index_eg.html
@@ -144,7 +144,7 @@
                 themselves in the role of a young high-school girl new to town.
                 <br />
                 I took care of the design part of the app with my colleague, the
-                interface, the code and the communication.
+                interface, the code and communication.
               </p>
             </div>
 
@@ -343,7 +343,7 @@
                     understand their expectations, receive their feedback and
                     explain my own decisions clearly and concisely.
                     <br />
-                    Each video is an opportunity to tell a captivating story.
+                    Each video is an opportunity to tell a story.
                   </p>
 
                   <p class="text-center">
@@ -380,9 +380,7 @@
                     brand from scratch. We designed its DNA, activities and
                     services, as well as its graphic charter including logo,
                     fonts, colors and visuals. I also personally took charge of
-                    the development and design of the website that presented the
-                    structure, its activities and its team, while offering
-                    visitors the opportunity to contact us.
+                    the development and design of the website.
                   </p>
                   <p class="text-center">
                     <a
@@ -405,8 +403,8 @@
       <section id="contact">
         <h2 class="newfont">Contact me</h2>
         <p>
-          If my skills and experience interest you or correspond to what you're
-          looking for, don't hesitate to reach out by sending an email to
+          If my skills correspond to what you're currently looking for, don't
+          hesitate to reach out by sending an email to
           <a href="mailto:camierkandyss@gmail.com" target="_blank"
             >camierkandyss@gmail.com</a
           >. <br />
@@ -418,12 +416,6 @@
             href="https://www.linkedin.com/in/kandyss-camier-ab0242227/"
             target="_blank"
             ><i class="fa-brands fa-linkedin" style="color: #4772bd"></i
-          ></a>
-          <br />
-          I'm also active on GitHub, where I share my most recent projects. Take
-          a look at my work here :
-          <a href="https://github.com/andy231F" target="_blank"
-            ><i class="fa-brands fa-github" style="color: #424242"></i
           ></a>
         </p>
       </section>
