--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 Lovia High est un roman visuel interactif où les joueurs se
                 retrouvent dans le rôle d'une jeune lycéenne nouvelle en ville.
                 <br />
-                Je me suis occupé de la partie design avec ma collaboratrice, de
+                Je me suis occupée de la partie design avec ma collaboratrice, de
                 l’interface, du code et de la communication.
               </p>
             </div>
